--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,349 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="icon" href="/images/icon/namu_logo.svg">
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+
+    <header class="page__header header" id="home">
+      <div class="header__background">
+        <a href="#home" class="header__link">
+          <img
+            src="/images/icon/namu_logo.svg"
+            alt="NAMU logo"
+            class="header__logo"
+          >
+        </a>
+      </div>
+
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top-bar">
+            <a href="#menu" class="header__icon"></a>
+
+            <h1 class="header__title">Художній музей</h1>
+
+            <button type="button" class="header__button button">
+              <a href="#lecture" class="button__link">
+                <div class="button__text">Квитки</div>
+
+                <img
+                  src="images/icon/icon_green_button_arrow.png"
+                  alt="arrow"
+                  class="button__arrow"
+                >
+              </a>
+            </button>
+
+            <a href="#events" class="header__events"></a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__background">
+        <div class="menu__content">
+          <section class="menu__top-bar">
+            <a href="#home" class="menu__close"></a>
+
+            <ul class="menu__nav nav">
+              <div class="nav__left">
+                <li class="nav__item">
+                  <a href="#galery" class="nav__link">Галерея</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#events" class="nav__link">Виставки та події</a>
+                </li>
+              </div>
+
+              <div class="nav__right">
+                <li class="nav__item">
+                  <a href="#following"  class="nav__link">Про Нас</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#contacts"  class="nav__link">Контакти</a>
+                </li>
+              </div>
+            </ul>
+          </section>
+
+          <section class="menu__bottom-bar bottom-bar">
+            <h6 class="bottom-bar__title">Графік роботи</h6>
+            <section class = "bottom-bar__sheldure">
+              <p class="bottom-bar__timetable">
+                <span class="bottom-bar__bold">12:00 — 20:00</span> середа<br>
+                <span class="bottom-bar__bold">12:00 — 20:00</span> четвер<br>
+                <span class="bottom-bar__bold">12:00 — 20:00</span> п’ятниця<br>
+                <span class="bottom-bar__bold">11:00 — 19:00</span> субота<br>
+                <span class="bottom-bar__bold">11:00 — 19:00</span> неділя<br>
+              </p>
+              <p class="bottom-bar__weekend">
+                <span class="bottom-bar__bold">Вихідні:</span> понеділок, вівторок
+                Каса припиняє роботу за 1 годину до закриття музею.
+              </p>
+            </section>
+          </section>
+        </div>
+      </div>
+    </aside>
+
+    <main class="page__main main">
+      <section class="events" id="events">
+        <div class="container">
+          <div class="events__content">
+            <h2 class="events__header">Актуальні події</h2>
+
+            <article class="event">
+              <img
+                src="/images/event_photo_1.png"
+                alt="first event photo"
+                class="event__img"
+              >
+
+              <div class="event__card">
+                <div class="event__info">
+                  <h4 class="event__title">ВИСТАВКА</h4>
+
+                  <h5 class="event__date">26.08-29.11.2019</h5>
+                </div>
+                <div class="event__header">
+                  <h3 class="event__name">Йду і повертаюсь</h3>
+
+                  <img
+                    src="/images/icon/icon_red_rectangle_15px.svg"
+                    alt="red rectangle icon"
+                    class="event__icon"
+                  >
+                </div>
+
+                <p class="event__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку
+                  - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article class="event">
+              <img
+                src="/images/event_photo_2.png"
+                alt="first event photo"
+                class="event__img"
+              >
+
+              <div class="event__card">
+                <div class="event__info">
+                  <h4 class="event__title">ВИСТАВКА</h4>
+
+                  <h5 class="event__date">26.08-29.11.2019</h5>
+                </div>
+
+                <div class="event__header">
+                  <h3 class="event__name">І спогади і мрії
+                    <img
+                      src="/images/icon/icon_red_rectangle_15px.svg"
+                      alt="red rectangle icon"
+                      class="event__icon"
+                    >
+                  </h3>
+                </div>
+                <p class="event__text event__text--last">
+                  Національний художній музей України до 100 річчя від дня народження   видатної
+                  української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку
+                  «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="lecture" id="lecture">
+        <div class="lecture__background">
+          <img
+            src="/images/event_photo_wide_3.png"
+            alt="paint with evening sky"
+            class="lecture__paint"
+          >
+        </div>
+
+        <article class="lecture__ad">
+          <div class="lecture__card">
+            <div class="lecture__info">
+              <h4 class="lecture__title">ЛЕКЦІЯ</h4>
+
+              <h5 class="lecture__date">26.08-29.11.2019</h5>
+            </div>
+
+            <h3 class="lecture__header">Від класицизму до романтизму</h3>
+          </div>
+        </article>
+      </section>
+
+      <section class="galery" id="galery">
+        <div class="container">
+          <div class="galery__content">
+            <h2 class="galery__header">Галерея</h2>
+
+            <div class="galery__top-row">
+              <img
+              src="./images/galery_pic_portrait_1.png"
+                alt="picture woman's portrait"
+                class="galery__img galery__img--1"
+                >
+
+              <img
+                src="./images/galery_pic_goose_vertical.png"
+                alt="picture woman's portrait"
+                class="galery__img galery__img--5"
+              >
+
+              <img
+              src="images/galery_pic_square_2.png"
+              alt="picture woman's portrait"
+            class="galery__img galery__img--2"
+            >
+            </div>
+
+            <div class="galery__bottom-row">
+              <img
+              src="./images/galery_pic_landscape_3.png"
+              alt="picture woman's portrait"
+              class="galery__img galery__img--3"
+              >
+              <img
+              src="./images/galery_pic_square_4.png"
+              alt="picture woman's portrait"
+              class="galery__img galery__img--4"
+              >
+            </div>
+
+
+            <div class="galery__points">
+              <a href="#" class="galery__point galery__points--active"></a>
+              <a href="#" class="galery__point galery__points--not-active"></a>
+              <a href="#" class="galery__point galery__points--not-active"></a>
+              <a href="#" class="galery__point galery__points--not-active"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__folowing folowing" id="following">
+        <h2 class="folowing__header">Підписка</h2>
+
+        <p class="folowing__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form action="POST" class="folowing__form">
+          <input
+            type="email"
+            placeholder="E-mail"
+            class="folowing__input"
+            required
+          >
+
+          <button type="submit" class="folowing__submit"></button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <section class="footer__icons icons">
+            <a href="#home" class="icons__logo"></a>
+
+            <div class="icons__social">
+              <a
+                href="https:\facebook.com"
+                target="_blank"
+                class="icons__link icons__link--facebook"
+              ></a>
+
+              <a
+                href="https:\instagram.com"
+                target="_blank"
+                class="icons__link icons__link--instagram"
+              ></a>
+            </div>
+          </section>
+
+          <section class="footer__how-to-contact how-to-contact">
+            <div class="how-to-contact__sheldure">
+              <h6 class="how-to-contact__title">Графік роботи</h6>
+
+              <p class="how-to-contact__text">
+                <span class="how-to-contact__bold">12:00 — 20:00</span> середа<br>
+                <span class="how-to-contact__bold">12:00 — 20:00</span> четвер<br>
+                <span class="how-to-contact__bold">12:00 — 20:00</span> п’ятниця<br>
+                <span class="how-to-contact__bold">11:00 — 19:00</span> субота<br>
+                <span class="how-to-contact__bold">11:00 — 19:00</span> неділя<br><br>
+                <span class="how-to-contact__bold">Вихідні:</span> понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину<br>
+                до закриття музею.
+              </p>
+            </div>
+
+            <div class="how-to-contact__contacts" id="contacts">
+              <h6 class="how-to-contact__title">Контакти:</h6>
+
+              <p class="how-to-contact__text">
+                вул. М. Грушевського, 6; Київ,<br>
+                01001<br>
+                тел. +38 (044) 278-13-57<br>
+                факс +38 (044) 278-74-54<br>
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+
+            <a href="#" class="how-to-contact__button"></a>
+          </section>
+
+          <img
+            src="/images/green_decoration_line.svg"
+            alt="decoration line"
+            class="footer__decoration"
+          >
+
+          <section class="footer__menu">
+            <ul class="footer-nav">
+              <div class="footer-nav__left">
+                <li class="footer-nav__item">
+                  <a href="#galery"  class="footer-nav__link">Галерея</a>
+                </li>
+
+                <li class="footer-nav__item">
+                  <a href="#events" class="footer-nav__link">Виставки та події</a>
+                </li>
+              </div>
+
+              <div class="footer-nav__right">
+                <li class="footer-nav__item">
+                  <a href="#following"  class="footer-nav__link">Про Нас</a>
+                </li>
+
+                <li class="footer-nav__item">
+                  <a href="#contacts"  class="footer-nav__link">Контакти</a>
+                </li>
+              </div>
+            </ul>
+          </section>
+
+          <section class="footer__authors">
+            <div class="footer__design">Designed by Zhyriada Marina</div>
+
+            <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
+          </section>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
