--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,464 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="shortcut icon" href="images/logo/NAMU.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__content">
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header page__header">
+      <div class="header__top">
+        <div class="container">
+          <div class="header__top-bar top-bar">
+            <a
+              href="#menu-header"
+              class="top-bar__menu"
+            >
+            </a>
+            <a
+              href="#"
+              class="logo"
+            >
+              <p class="logo__name">NA</p>
+              <p class="logo__name">MU</p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="header__bottom">
+        <div class="container container--title">
+          <div class="header__bottom-wr">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__tickets tickets">
+              <p class="tickets__main">квитки</p>
+              <a
+                href="#actions"
+                class="btn btn__tickets"
+              >
+                <img
+                  src="images/icons/arrow.svg"
+                  alt="tickets"
+                  class="tickets__arrow"
+                >
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p class="header__decor">події</p>
+      <div class="header__menu-header menu-header" id="menu-header">
+        <div class="menu-header__content">
+          <div class="container">
+            <div class="menu-header__box">
+              <div class="menu-header__top">
+                <a
+                  href="#"
+                  class="menu-header__close"
+                >
+                </a>
+
+                <section class="menu">
+                  <h2 class="visually-hidden">Меню</h2>
+                  <div class="menu__content menu__content--header">
+                    <div class="menu__box">
+                      <a
+                        href="#gallery"
+                        class="menu__item menu__item--header"
+                      >
+                        Галерея
+                      </a>
+                      <a
+                        href="#actions"
+                        class="menu__item menu__item--header"
+                      >
+                        Виставки та події
+                      </a>
+                    </div>
+                    <div class="menu__box">
+                      <a
+                        href="#schedule"
+                        class="menu__item menu__item--header"
+                      >
+                        Про Нас
+                      </a>
+                      <a
+                        href="#schedule"
+                        class="menu__item menu__item--header"
+                      >
+                        Контакти
+                      </a>
+                    </div>
+                  </div>
+                </section>
+              </div>
+
+              <div class="menu-header__bottom">
+                <div class="menu-header__schedule">
+                  <p class="menu-header__text menu-header__text--title">Графік роботи</p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong>
+                      середа
+                  </p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong>
+                      четвер
+                  </p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong>
+                      п’ятниця
+                  </p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong>
+                      субота
+                  </p>
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">12:00 — 20:00</strong>
+                      неділя
+                  </p>
+                </div>
+                <div class="menu-header__text-box">
+                  <p class="menu-header__text">
+                    <strong class="menu-header__time">Вихідні:</strong>
+                      понеділок, вівторок
+                  </p>
+                  <p class="menu-header__text">Каса припиняє роботу за 1 годину до закриття музею </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <section class="actions">
+        <div class="container">
+          <h2 class="main__title section-title" id="actions">Актуальні події</h2>
+        </div>
+        <article class="actions__item">
+          <div class="container">
+            <div class="actions__content">
+              <div class="actions__img-wr">
+                <img
+                  src="images/events-photo/events-1.png"
+                  alt="Йду і повертаюсь"
+                  class="actions__img"
+                >
+              </div>
+              <div class="actions__description">
+                <div class="actions__data">
+                  <p class="actions__name">Виставка</p>
+                  <p class="actions__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="actions__title">Йду і повертаюсь</h3>
+                <p class="actions__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років. </p>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="actions__item">
+          <div class="container">
+            <div class="actions__content">
+              <div class="actions__img-wr">
+                <img
+                  src="images/events-photo/events-2.png"
+                  alt="І спогади і мрії"
+                  class="actions__img"
+                >
+              </div>
+              <div class="actions__description">
+                <div class="actions__data">
+                  <p class="actions__name">Виставка</p>
+                  <p class="actions__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="actions__title">І спогади і мрії</h3>
+                <p class="actions__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="actions__item">
+          <div class="actions__img-wr">
+            <img
+              src="images/middle-photo/1.png"
+              alt="Від класицизму до романтизму"
+              class="actions__img actions__img--3"
+            >
+          </div>
+          <div class="container">
+            <div class="actions__bottom">
+              <div class="actions__data actions__data--3">
+                <p class="actions__name">ЛЕКЦІЯ</p>
+                <p class="actions__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="actions__title actions__title--3">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </article>
+      </section>
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title section-title">Галерея</h2>
+          <div class="gallery__slider slider">
+            <div class="slider__images">
+              <div class="slider__img-wr">
+                <img
+                  src="images/icons/dots.svg"
+                  alt="image-1"
+                  class="slider__img"
+                >
+              </div>
+              <div class="slider__img-wr">
+                <img
+                  src="images/icons/dots-2.svg"
+                  alt="image-1"
+                  class="slider__img"
+                >
+              </div>
+              <div class="slider__img-wr">
+                <img
+                  src="images/icons/dots-3.svg"
+                  alt="image-1"
+                  class="slider__img"
+                >
+              </div>
+              <div class="slider__img-wr">
+                <img
+                  src="images/icons/dots-4.svg"
+                  alt="image-1"
+                  class="slider__img"
+                >
+              </div>
+            </div>
+            <div class="slider__buttons">
+              <div class="slider__button-wr" data-image-num="0">
+                <div class="slider__button slider__button--active"></div>
+              </div>
+              <div class="slider__button-wr" data-image-num="1">
+                <div class="slider__button"></div>
+              </div>
+              <div class="slider__button-wr" data-image-num="2">
+                <div class="slider__button"></div>
+              </div>
+              <div class="slider__button-wr" data-image-num="3">
+                <div class="slider__button"></div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery__content">
+            <div class="gallery__img-wr gallery__img-wr--1">
+              <img
+                src="images/gallery-photo/1-l.png"
+                alt="image-1"
+                class="gallery__img-dt gallery__img-dt--1"
+              >
+            </div>
+            <div class="gallery__img-wr gallery__img-wr--2">
+              <img
+                src="images/gallery-photo/1-r.png"
+                alt="image-2"
+                class="gallery__img-dt gallery__img-dt--2"
+              >
+            </div>
+            <div class="gallery__img-wr gallery__img-wr--3">
+              <img
+                src="images/gallery-photo/2-l.png"
+                alt="image-3"
+                class="gallery__img-dt gallery__img-dt--3"
+              >
+            </div>
+            <div class="gallery__img-wr gallery__img-wr--4">
+              <img
+                src="images/gallery-photo/2-r.png"
+                alt="image-4"
+                class="gallery__img-dt gallery__img-dt--4"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="container">
+          <div class="subscribe__content">
+            <h2 class="section-title subscribe__title">Підписка</h2>
+            <p class="subscribe__subtitle">Бути в курсі всіх актуальних подій та останніх новин. </p>
+            <form
+              action="#"
+              class="form subscribe__form"
+              onsubmit="this.reset(); return false"
+            >
+              <div class="form__input-box">
+                <input
+                  type="email"
+                  class="form__email"
+                  name="email"
+                  autocomplete="on"
+                  placeholder="E-mail"
+                  required
+                >
+                <button class="btn btn__form">
+                  <img
+                    src="images/icons/black-arrow.svg"
+                    alt="tickets"
+                    class="tickets__arrow"
+                  >
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__schedule schedule" id="schedule">
+        <h2 class="visually-hidden"></h2>
+        <div class="container">
+          <div class="schedule__content">
+            <div class="schedule__header">
+              <a href="#" class="logo">
+                <p class="logo__name">NA</p>
+                <p class="logo__name">MU</p>
+              </a>
+              <div class="social-icons">
+                <a
+                  href="https://facebook.com"
+                  class="social-icons__item"
+                  target="_blank"
+                >
+                  <img
+                    src="images/icons/facebook.svg"
+                    alt="facebook icon"
+                  >
+                </a>
+                <a
+                  href="https://instagram.com"
+                  target="_blank"
+                  class="social-icons__item"
+                >
+                  <img
+                    src="images/icons/instagram.svg"
+                    alt="instagram icon"
+                  >
+                </a>
+              </div>
+            </div>
+            <div class="schedule__left">
+              <p class="schedule__text schedule__text--title">Графік роботи</p>
+              <div class="schedule__items">
+                <div class="schedule__item">
+                  <p class="schedule__text--time">12:00 - 20:00</p>
+                  <p class="schedule__day">середа</p>
+                </div>
+                <div class="schedule__item">
+                  <p class="schedule__text--time">12:00 - 20:00</p>
+                  <p class="schedule__day">четвер</p>
+                </div>
+                <div class="schedule__item">
+                  <p class="schedule__text--time">12:00 - 20:00</p>
+                  <p class="schedule__day">п'ятниця</p>
+                </div>
+                <div class="schedule__item">
+                  <p class="schedule__text--time">12:00 - 20:00</p>
+                  <p class="schedule__day">субота</p>
+                </div>
+                <div class="schedule__item">
+                  <p class="schedule__text--time">12:00 - 20:00</p>
+                  <p class="schedule__day">неділя</p>
+                </div>
+              </div>
+              <p class="schedule__text">
+                <strong>Вихідні:</strong>
+                  понеділок, вівторок
+              </p>
+              <p class="schedule__text">Каса припиняє роботу за одну годину до закриття музею </p>
+            </div>
+            <div class="schedule__right">
+              <p class="schedule__text schedule__text--title">Контакти:</p>
+              <a
+                href="https://www.google.com/maps"
+                target="_blank"
+                class="schedule__text schedule__text--link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a
+                href="tel:+38(044)278-13-57"
+                target="_blank"
+                class="schedule__text schedule__text--link"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <a
+                href="tel:+38(044)278-13-57"
+                target="_blank"
+                class="schedule__text schedule__text--link"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <a
+                href="mailto:info@namu.kiev.ua"
+                target="_blank"
+                class="schedule__text schedule__text--link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+            <a href="#" class="schedule__btn">
+              <img
+                src="images/icons/arrow.svg"
+                alt="наверх"
+              >
+            </a>
+            <div class="menu schedule__menu">
+              <h2 class="visually-hidden"></h2>
+              <div class="menu__content">
+                <div class="menu__box">
+                  <a
+                    href="#gallery"
+                    class="menu__item"
+                  >
+                    Галерея
+                  </a>
+                  <a
+                    href="#actions"
+                    class="menu__item"
+                  >
+                    Виставки та події
+                  </a>
+                </div>
+                <div class="menu__box">
+                  <a
+                    href="#schedule"
+                    class="menu__item"
+                  >
+                    Про Нас
+                  </a>
+                  <a
+                    href="#schedule"
+                    class="menu__item"
+                  >
+                    Контакти
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <div class="container">
+      <footer class="footer page__footer">
+        <div class="footer__content">
+          <div class="footer__item">Copyright © 2019. All Rights Reserved.</div>
+          <div class="footer__item">Designed by Zhyriada Marina</div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
