--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,18 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Inter:wght@400;500;600;700&family=Manrope:wght@400;500;700&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&family=Poppins:ital,wght@0,400;0,600;1,400;1,600&family=Roboto:ital,wght@0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
     <link
-          class="favicon"
-          rel="icon"
-          href="./images/logo.png"
-          type="image/x-icon"
-        >
+      href="https://fonts.googleapis.com/css2?family=Caveat&family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Inter:wght@400;500;600;700&family=Manrope:wght@400;500;700&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&family=Poppins:ital,wght@0,400;0,600;1,400;1,600&family=Roboto:ital,wght@0,400;0,500;0,700;1,500&display=swap"
+      rel="stylesheet">
+    <link
+      class="favicon"
+      rel="icon"
+      href="./images/logo.png"
+      type="image/x-icon"
+    >
   </head>
-  <body>
+
+  <body class="page__body">
     <header class="header">
       <div class="header__bg"></div>
       <div class="container ">
@@ -32,7 +36,10 @@
 
         <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-        <a href="#" class="header__button"> КВИТКИ </a>
+        <div class="header__button">
+          <a href="#" class="header__button--link">КВИТКИ</a>
+          <div class="header__button--arie"></div>
+        </div>
 
         <span class="header__line">
           <p class="header__line--text">ПОДІЇ</p>
@@ -47,10 +54,10 @@
           <a href="#" class="icon icon--close"></a>
           <div class="side__bar__top--left">
             <a href="#galery" class="side__link">Галерея</a>
-            <a href="#events" class="side__link">Виставки та події</a>
+            <a href="#current__events" class="side__link">Виставки та події</a>
           </div>
           <div class="side__bar__top--right">
-            <a href="#aboute__us" class="side__link">Про Нас</a>
+            <a href="#events" class="side__link">Про Нас</a>
             <a href="#contacts" class="side__link">Контакти</a>
           </div>
         </div>
@@ -58,17 +65,21 @@
         <div class="side__bar__line"></div>
 
         <div class="side__bottom">
-          <p class="list__name" >Графік роботи</p>
+          <p class="list__name">Графік роботи</p>
           <div class="side__bottom__items">
             <ul class="side__list">
-              <li class="list__items" > <span class="item__bold" >12:00 — 20:00</span> середа</li>
-              <li class="list__items" > <span class="item__bold" >12:00 — 20:00</span> четвер</li>
-              <li class="list__items" > <span class="item__bold" >12:00 — 20:00</span> п’ятниця</li>
-              <li class="list__items" > <span class="item__bold" >11:00 — 19:00</span> субота</li>
-              <li class="list__items" > <span class="item__bold" >11:00 — 19:00</span> неділя</li>
+              <li class="list__items"> <span class="item__bold">12:00 — 20:00</span> середа</li>
+              <li class="list__items"> <span class="item__bold">12:00 — 20:00</span> четвер</li>
+              <li class="list__items"> <span class="item__bold">12:00 — 20:00</span> п’ятниця</li>
+              <li class="list__items"> <span class="item__bold">11:00 — 19:00</span> субота</li>
+              <li class="list__items"> <span class="item__bold">11:00 — 19:00</span> неділя</li>
             </ul>
             <div class="side__weekend">
-              <p class="side__weekend--days"> <span class="item__bold" >Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею</p>
+              <p class="side__weekend--days">
+                <span class="item__bold">Вихідні:</span>
+                понеділок, вівторок <br> Касаприпиняє
+                роботу за 1 годину до закриття музею
+              </p>
             </div>
           </div>
         </div>
@@ -92,7 +103,9 @@
               <p class="exhibition__date">26.08-29.11.2019</p>
             </div>
             <h3 class="exhibition__title">Йду і повертаюсь</h3>
-            <p class="exhibition__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            <p class="exhibition__description">Національний Художній Музей України презентує унікальну частину колекції
+              Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
           </div>
         </article>
         <article class="current article--2">
@@ -109,7 +122,10 @@
               <p class="exhibition__date">26.08-29.11.2019</p>
             </div>
             <h3 class="exhibition__title">І спогади і мрії</h3>
-            <p class="exhibition__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            <p class="exhibition__description">Національний художній музей України до 100 річчя від дня народження
+              видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і
+              мрії».
+            </p>
           </div>
         </article>
 
@@ -119,12 +135,16 @@
           alt="Picture"
         >
 
-        <div class="current__bottom-description">
-          <div class="exhibition">
-            <p class="exhibition__item">ЛЕКЦІЯ</p>
-            <p class="exhibition__date">26/08/2019 - 11:00</p>
-          </div>
-          <h3 class="exhibition__title current__bottom__title">Від класицизму до романтизму</h3>
+        <div class="current__item">
+          <article class="current__event">
+            <div class="event__container">
+              <div class="event__content">
+                <p class="exhibition__item">ЛЕКЦІЯ</p>
+                <p class="exhibition__date">26/08/2019 - 11:00</p>
+              </div>
+              <h2 class="event__container--title">Від класицизму до романтизму</h2>
+            </div>
+          </article>
         </div>
 
       </section>
@@ -171,16 +191,11 @@
         <h2 class="events__title">Підписка</h2>
         <p class="events__descroption">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-        <form
-          action="#"
-          method="get"
-          class="events__form"
-        >
+        <form class="events__form">
           <input
             type="email"
             name="email"
-            placeholder="E-mail"
-            class="events__form--input"
+            placeholder="E-mail" class="events__form--input"
             required
           >
           <button class="events__form--button" type="submit"></button>
@@ -220,11 +235,16 @@
       <div class="contacts__work contacts__connect">
         <div class="contacts__work--day">Контакти:</div>
         <div class="contacts__work--hours">
-          <a href="#" class="contacts__link">вул. М. Грушевського, 6; Київ, 01001</a>
-          <a href="#" class="contacts__link">тел. +38 (044) 278-13-57</a>
-          <a href="#" class="contacts__link">факс +38 (044) 278-74-54</a>
-          <a href="#" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+          <a href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
+            class="contacts__link">вул. М. Грушевського, 6; Київ, 01001</a>
+          <a href="tel:+38 (044) 278-13-57" class="contacts__link">тел. +38 (044) 278-13-57</a>
+          <a href="tel:+38 (044) 278-74-54" class="contacts__link">факс +38 (044) 278-74-54</a>
+          <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
         </div>
+      </div>
+
+      <div class="contacts__arrow">
+        <a href="#" class="contacts__arrow--content"> <span class="icon icon--arrow"></span></a>
       </div>
 
       <div class="contacts__line"></div>
@@ -232,10 +252,10 @@
       <div class="contacts__menu">
         <div class="contacts__items top--left">
           <a href="#galery" class="contacts__menu__link">Галерея</a>
-          <a href="#events" class="contacts__menu__link">Виставки та події</a>
+          <a href="#current__events" class="contacts__menu__link">Виставки та події</a>
         </div>
         <div class="contacts__items top--right">
-          <a href="#aboute__us" class="contacts__menu__link">Про Нас</a>
+          <a href="#events" class="contacts__menu__link">Про Нас</a>
           <a href="#contacts" class="contacts__menu__link">Контакти</a>
         </div>
       </div>
@@ -249,4 +269,5 @@
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
